--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/native": "^7.0.14",
+    "@shopify/react-native-skia": "1.5.0",
+    "@shopify/restyle": "^2.4.5",
     "@tanstack/react-query": "^5.74.4",
     "clsx": "^2.1.1",
     "expo": "~52.0.46",
@@ -42,6 +44,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-bars": "^2.4.3",
     "react-native-css-interop": "^0.1.22",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-mmkv": "^3.2.0",
