--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
+    "expo-zustand-persist": "^1.0.4",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-async-storage": "^0.0.1",
     "react-native-bars": "^2.4.3",
     "react-native-css-interop": "^0.1.22",
     "react-native-gesture-handler": "~2.20.2",
@@ -58,7 +60,8 @@
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^3.4.17",
     "zod": "^3.24.3",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
